# Platonic-Solids

./: CMakeLists.txt
src/: main.cpp
